add-migration DB

--- a/HCQS.BackEnd.API/appsettings.json
+++ b/HCQS.BackEnd.API/appsettings.json
@@ -5,5 +5,57 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "Domain": {
+    "FE": "https://www.facebook.com/duonghongquan.contact"
+  },
+  "JWT": {
+    "Key": "HONGQUAN_MINHKHANG_MON_NOBITA_QUANMON_KHANGNO",
+    "Issuer": "https://localhost:7022",
+    "Audience": "Mon"
+  },
+  "Momo": {
+    "PartnerCode": "MOMO",
+    "AccessKey": "F8BBA842ECF85",
+    "Secretkey": "K951B6PE1waDMi640xX08PD3vg6EkVlz",
+    "Api": "https://test-payment.momo.vn/v2/gateway/api/create",
+    "RedirectUrl": "https://google.com",
+    "IPNUrl": "https://monshop.azurewebsites.net/payment/MomoIpn"
+  },
+  "Vnpay": {
+    "TmnCode": "P0IHJQ8B",
+    "HashSecret": "VNVTUUQJPFXQHFLXQKUIKPOXZXIRTENN",
+    "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
+    "Command": "pay",
+    "CurrCode": "VND",
+    "Version": "2.1.0",
+    "Locale": "vn",
+    "Api": "https://sandbox.vnpayment.vn/merchant_webapi/api/transaction",
+    "ReturnUrl": "https://google.com"
+  },
+  "SecretKey": {
+    "EncryptionKey": "HONGQUAN_MINHKHANG_MON_NOBITA_QUANMON_KHANGNO"
+  },
+  "Email": {
+    "User": "qk.backend@gmail.com",
+    "ApplicationPassword": "bvlbofvcqxcvqvbz"
+  },
+  "Google": {
+    "ClientID": "127998565458-a8cb491k05aac6gas3rpjfpf8omel3fn.apps.googleusercontent.com",
+    "ClientSecret": "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"
+  },
+  "Firebase": {
+    "ApiKey": "AIzaSyCXWtSLqIGCSoOIQS4A3jYYkanQdmllaZw",
+    "Bucket": "yogacenter-44949.appspot.com",
+    "AuthEmail": "qk.backend@gmail.com",
+    "AuthPassword": "qkPw@123"
+  },
+  "RedisConfiguration": {
+    "Enabled": true,
+    "ConnectionString": "127.0.0.1"
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DB": "server=.;database=HCQS_DB;uid=sa;pwd=12345;TrustServerCertificate=True;"
+  },
+  "TimeZoneId": "SE Asia Standard Time"
 }
