--- a/HCQS.BackEnd.Service/HCQS.BackEnd.Service.csproj
+++ b/HCQS.BackEnd.Service/HCQS.BackEnd.Service.csproj
@@ -1,9 +1,26 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+	  <PackageReference Include="Firebase.Auth" Version="1.0.0" />
+	  <PackageReference Include="NPOI" Version="2.6.2" />
+	  <PackageReference Include="RestSharp" Version="110.2.0" />
+	  <PackageReference Include="FirebaseStorage.net" Version="1.0.3" />
+	  <PackageReference Include="Hangfire" Version="1.8.6" />
+	  <PackageReference Include="MailKit" Version="4.2.0" />
+	  <PackageReference Include="DinkToPdf" Version="1.0.8" />
+	  <PackageReference Include="DinkToPdfCopyDependencies" Version="1.0.8" />
+	  <PackageReference Include="EPPlus" Version="7.0.1" />
+	  <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="6.0.25" />
+	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+	  <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
+	  <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+    <ProjectReference Include="..\HCQS.BackEnd.DAL\HCQS.BackEnd.DAL.csproj" />
+  </ItemGroup>
 
 </Project>
