--- a/HCQS.BackEnd.API/HCQS.BackEnd.API.csproj
+++ b/HCQS.BackEnd.API/HCQS.BackEnd.API.csproj
@@ -15,16 +15,19 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.20" />
+
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.20">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.4" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
 	</ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\HCQS.BackEnd.Service\HCQS.BackEnd.Service.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
   </ItemGroup>
 	<ItemGroup>
 		<Content Update="appsettings.json">
