--- a/HCQS.BackEnd.API/appsettings.json
+++ b/HCQS.BackEnd.API/appsettings.json
@@ -55,7 +55,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DB": "server=.;database=HCQS_DB;uid=sa;pwd=12345;TrustServerCertificate=True;"
+    "DB": "server=.;database=HCQS_DB;uid=sa;pwd=12345;TrustServerCertificate=True;MultipleActiveResultSets=True;",
+    "Host": "Server=tcp:hcqs-server.database.windows.net,1433;Initial Catalog=hcqs-database;User ID=hcqs-server-admin;Password=qkPw@123;MultipleActiveResultSets=True;TrustServerCertificate=True"
   },
   "TimeZoneId": "SE Asia Standard Time"
 }
