ADD_FIELD And fie service

--- a/HCQS.BackEnd.API/appsettings.json
+++ b/HCQS.BackEnd.API/appsettings.json
@@ -44,8 +44,8 @@
     "ClientSecret": "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"
   },
   "Firebase": {
-    "ApiKey": "AIzaSyCXWtSLqIGCSoOIQS4A3jYYkanQdmllaZw",
-    "Bucket": "yogacenter-44949.appspot.com",
+    "ApiKey": "AIzaSyAo6uPHRwoCklFSGQbRyzfTBW5G_H6wTEI",
+    "Bucket": "hcqs-project.appspot.com",
     "AuthEmail": "qk.backend@gmail.com",
     "AuthPassword": "qkPw@123"
   },
