--- a/HCQS.BackEnd.Common/HCQS.BackEnd.Common.csproj
+++ b/HCQS.BackEnd.Common/HCQS.BackEnd.Common.csproj
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Dto\Response\" />
+	  <PackageReference Include="FluentValidation" Version="11.9.0" />
+	  <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0" />
+	  <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="2.2.0" />
+
+	  <Folder Include="Dto\Response\" />
   </ItemGroup>
 
 </Project>
