--- a/HCQS.BackEnd.Service/HCQS.BackEnd.Service.csproj
+++ b/HCQS.BackEnd.Service/HCQS.BackEnd.Service.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
 	  <PackageReference Include="Firebase.Auth" Version="1.0.0" />
+	  <PackageReference Include="FirebaseAdmin" Version="2.0.0" />
+	  <PackageReference Include="Google.Apis.Auth" Version="1.65.0" />
 	  <PackageReference Include="NPOI" Version="2.6.2" />
 	  <PackageReference Include="RestSharp" Version="110.2.0" />
 	  <PackageReference Include="FirebaseStorage.net" Version="1.0.3" />
