--- a/HCQS.BackEnd.API/HCQS.BackEnd.API.csproj
+++ b/HCQS.BackEnd.API/HCQS.BackEnd.API.csproj
@@ -9,6 +9,9 @@
 	<ItemGroup>
 
 
+		<PackageReference Include="Google.Cloud.Storage.V1" Version="4.7.0" />
+
+
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.21" />
 
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.22">
