--- a/HCQS.BackEnd.Common/HCQS.BackEnd.Common.csproj
+++ b/HCQS.BackEnd.Common/HCQS.BackEnd.Common.csproj
@@ -10,6 +10,8 @@
 	  <PackageReference Include="FluentValidation" Version="11.9.0" />
 	  <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0" />
 	  <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="2.2.0" />
+	  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+	  <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
 
 	  <Folder Include="Dto\Response\" />
   </ItemGroup>
