--- a/HCQS.BackEnd.API/appsettings.json
+++ b/HCQS.BackEnd.API/appsettings.json
@@ -69,7 +69,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DB": "server=.;database=HCQS_DB;uid=sa;pwd=12345;TrustServerCertificate=True;MultipleActiveResultSets=True;",
-    "Host": "Server=tcp:hcqs-server.database.windows.net,1433;Initial Catalog=hcqs-database;User ID=hcqs-server-admin;Password=qkPw@123;MultipleActiveResultSets=True;TrustServerCertificate=True"
+    "Host": "Data Source=SQL5063.site4now.net;Initial Catalog=db_aa45b3_hcqsbe01;User Id=db_aa45b3_hcqsbe01_admin;Password=qkPw@123;MultipleActiveResultSets=True;TrustServerCertificate=True"
   },
   "TimeZoneId": "SE Asia Standard Time"
 }
