--- a/HCQS.BackEnd.Common/HCQS.BackEnd.Common.csproj
+++ b/HCQS.BackEnd.Common/HCQS.BackEnd.Common.csproj
@@ -9,9 +9,15 @@
   <ItemGroup>
 	  <PackageReference Include="FluentValidation" Version="11.9.0" />
 	  <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0" />
+	  <PackageReference Include="AutoMapper" Version="12.0.1" />
+	  <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
 	  <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="2.2.0" />
 	  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
 	  <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\HCQS.BackEnd.DAL\HCQS.BackEnd.DAL.csproj" />
   </ItemGroup>
 
 </Project>
