--- a/HCQS.BackEnd.Service/HCQS.BackEnd.Service.csproj
+++ b/HCQS.BackEnd.Service/HCQS.BackEnd.Service.csproj
@@ -22,6 +22,7 @@
 	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	  <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
 	  <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+	  <ProjectReference Include="..\HCQS.BackEnd.Common\HCQS.BackEnd.Common.csproj" />
     <ProjectReference Include="..\HCQS.BackEnd.DAL\HCQS.BackEnd.DAL.csproj" />
   </ItemGroup>
 
