--- a/HCQS.BackEnd.API/appsettings.json
+++ b/HCQS.BackEnd.API/appsettings.json
@@ -69,7 +69,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DB": "server=.;database=HCQS_DB;uid=sa;pwd=12345;TrustServerCertificate=True;MultipleActiveResultSets=True;",
-    "Host": "Data Source=SQL5063.site4now.net;Initial Catalog=db_aa45b3_hcqsbe01;User Id=db_aa45b3_hcqsbe01_admin;Password=qkPw@123;MultipleActiveResultSets=True;TrustServerCertificate=True"
+    "Host": "workstation id=Hcqs_db.mssql.somee.com;packet size=4096;user id=qkbe01_SQLLogin_1;pwd=k9t28d8hxp;data source=Hcqs_db.mssql.somee.com;persist security info=False;initial catalog=Hcqs_db;TrustServerCertificate=True;MultipleActiveResultSets=True;"
   },
   "TimeZoneId": "SE Asia Standard Time"
 }
