--- a/.gitignore
+++ b/.gitignore
@@ -396,3 +396,5 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+/HCQS.BackEnd.DAL/Migrations/20240226124258_changeDb.cs
+/HCQS.BackEnd.DAL/Migrations/20240226124258_changeDb.Designer.cs
