--- a/HCQS.BackEnd.API/appsettings.json
+++ b/HCQS.BackEnd.API/appsettings.json
@@ -18,7 +18,7 @@
     "AccessKey": "F8BBA842ECF85",
     "Secretkey": "K951B6PE1waDMi640xX08PD3vg6EkVlz",
     "Api": "https://test-payment.momo.vn/v2/gateway/api/create",
-    "RedirectUrl": "https://love-house.vercel.app/",
+    "RedirectUrl": "http://localhost:5173/payment",
     "IPNUrl": "https://hcqs-backend.azurewebsites.net/payment/MomoIpn"
   },
   "Vnpay": {
@@ -30,7 +30,7 @@
     "Version": "2.1.0",
     "Locale": "vn",
     "Api": "https://sandbox.vnpayment.vn/merchant_webapi/api/transaction",
-    "ReturnUrl": "https://love-house.vercel.app/"
+    "ReturnUrl": "http://localhost:5173/payment"
   },
   "SecretKey": {
     "EncryptionKey": "HONGQUAN_MINHKHANG_MON_NOBITA_QUANMON_KHANGNO"
