--- a/HCQS.BackEnd.API/appsettings.json
+++ b/HCQS.BackEnd.API/appsettings.json
@@ -68,7 +68,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DB": "server=.;database=HCQS_DB;uid=sa;pwd=12345;TrustServerCertificate=True;MultipleActiveResultSets=True;",
+    "DB": "server=.;database=HCQS_DB2;uid=sa;pwd=12345;TrustServerCertificate=True;MultipleActiveResultSets=True;",
     "Host": "Data Source=SQL5063.site4now.net;Initial Catalog=db_aa45b3_hcqsbe01;User Id=db_aa45b3_hcqsbe01_admin;Password=qkPw@123;MultipleActiveResultSets=True;TrustServerCertificate=True"
   },
   "TimeZoneId": "SE Asia Standard Time"
