--- a/HCQS.BackEnd.API/appsettings.json
+++ b/HCQS.BackEnd.API/appsettings.json
@@ -18,7 +18,7 @@
     "AccessKey": "F8BBA842ECF85",
     "Secretkey": "K951B6PE1waDMi640xX08PD3vg6EkVlz",
     "Api": "https://test-payment.momo.vn/v2/gateway/api/create",
-    "RedirectUrl": "http://localhost:5173/payment",
+    "RedirectUrl": "https://lovehouse.vercel.app/payment/",
     "IPNUrl": "https://hcqs-backend.azurewebsites.net/payment/MomoIpn"
   },
   "Vnpay": {
