commit code email notification

--- a/HCQS.BackEnd.API/appsettings.json
+++ b/HCQS.BackEnd.API/appsettings.json
@@ -18,20 +18,20 @@
         "AccessKey": "F8BBA842ECF85",
         "Secretkey": "K951B6PE1waDMi640xX08PD3vg6EkVlz",
         "Api": "https://test-payment.momo.vn/v2/gateway/api/create",
-        "RedirectUrl": "http://localhost:5173/payment",
+        "RedirectUrl": "https://lovehouse.vercel.app/payment",
         "IPNUrl": "https://hcqs-backend.azurewebsites.net/payment/MomoIpn"
     },
-    "Vnpay": {
-        "TmnCode": "P0IHJQ8B",
-        "HashSecret": "VNVTUUQJPFXQHFLXQKUIKPOXZXIRTENN",
-        "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
-        "Command": "pay",
-        "CurrCode": "VND",
-        "Version": "2.1.0",
-        "Locale": "vn",
-        "Api": "https://sandbox.vnpayment.vn/merchant_webapi/api/transaction",
-        "ReturnUrl": "http://localhost:5173/payment"
-    },
+  "Vnpay": {
+    "TmnCode": "P0IHJQ8B",
+    "HashSecret": "VNVTUUQJPFXQHFLXQKUIKPOXZXIRTENN",
+    "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
+    "Command": "pay",
+    "CurrCode": "VND",
+    "Version": "2.1.0",
+    "Locale": "vn",
+    "Api": "https://sandbox.vnpayment.vn/merchant_webapi/api/transaction",
+    "ReturnUrl": "https://lovehouse.vercel.app/payment"
+  },
     "SecretKey": {
         "EncryptionKey": "HONGQUAN_MINHKHANG_MON_NOBITA_QUANMON_KHANGNO"
     },
